# conduit

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  categories.txt  conduit-docker.toml  conduit.example.toml  conduit.toml  docker-compose.yml
.github/workflows/: build-and-push.yml  docs.yml
conduit-ui/: README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
conduit-ui/src/: app.css  hooks.server.ts
conduit-ui/src/lib/: api.ts  utils.ts
conduit-ui/src/lib/components/ui/select/: select-item.svelte
conduit-ui/src/routes/: +layout.svelte  +page.svelte
conduit-ui/src/routes/categories/: +page.svelte
conduit-ui/src/routes/dlp/: +page.svelte
conduit-ui/src/routes/logs/: +page.svelte
conduit-ui/src/routes/nodes/: +page.svelte
conduit-ui/src/routes/policies/: +page.svelte
conduit-ui/src/routes/settings/: +page.svelte
conduit-ui/src/routes/users/: +page.svelte
conduit/conduit-api/: Cargo.toml
conduit/conduit-api/src/: main.rs
conduit/conduit-api/src/routes/: ca.rs  categories.rs  config.rs  dlp.rs  health.rs  import.rs  import_ut1.rs  logs.rs  mod.rs  nodes.rs  policies.rs  stats.rs  threat.rs
conduit/conduit-common/: Cargo.toml
conduit/conduit-common/src/: ca.rs  config.rs  dns.rs  lib.rs  redis.rs  types.rs  util.rs
conduit/conduit-mock/: Cargo.toml
conduit/conduit-mock/src/: main.rs
conduit/conduit-proxy/: Cargo.toml
conduit/conduit-proxy/src/: conn_limit.rs  ctx.rs  dlp.rs  dns_cache.rs  load_balancer.rs  main.rs  metrics.rs  node.rs  proxy.rs  rate_limit.rs  service.rs  stats.rs
conduit/conduit-proxy/src/identity/: basic_auth.rs  ip_map.rs  kerberos.rs  mod.rs
conduit/conduit-proxy/src/logging/: dragonfly.rs  mod.rs  syslog.rs
conduit/conduit-proxy/src/mitm/: cert_cache.rs  cert_gen.rs  mod.rs  relay.rs  stream.rs  tls_accept.rs  tunnel.rs
conduit/conduit-proxy/src/policy/: categories.rs  mod.rs  rules.rs
conduit/conduit-proxy/src/threat/: bloom.rs  content.rs  entropy.rs  feeds.rs  heuristics.rs  ip_reputation.rs  llm.rs  mod.rs  model.rs  reputation.rs
deploy/k8s/rackspace/: .gitignore  Dockerfile.mock  api.yaml  conduit-config.yaml  deploy.sh  dragonfly.yaml  k6-configmap.yaml  k6-job.yaml  mock-upstream.yaml  namespace.yaml  node-tuning.yaml  proxy.yaml  seed-job.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: overview.md  request-pipeline.md
docs/src/configuration/: authentication.md  overview.md  timeouts-limits.md  tls-interception.md
docs/src/features/: caching.md  dlp.md  dns-caching.md  load-balancing.md  metrics.md  rate-limiting.md  threat-detection.md
docs/src/getting-started/: docker.md  installation.md  quick-start.md
docs/src/management/: api.md  multi-node.md  ui.md
docs/src/reference/: configuration.md
scripts/: categorize_domains.py  seed-dragonfly.sh
stress-test/: .gitignore  README.md  RESULTS.md  analyze.sh  collect-metrics.sh  conduit-stress.toml  docker-compose.stress.yml  k6-proxy-test.js  mock-upstream.js  prometheus.yml  run.sh
