[workspace]
resolver = "2"
members = [
    "conduit/conduit-common",
    "conduit/conduit-proxy",
    "conduit/conduit-api",
    # Pingora workspace members (path deps, never modified)
    "pingora/pingora",
    "pingora/pingora-core",
    "pingora/pingora-pool",
    "pingora/pingora-error",
    "pingora/pingora-limits",
    "pingora/pingora-timeout",
    "pingora/pingora-header-serde",
    "pingora/pingora-proxy",
    "pingora/pingora-cache",
    "pingora/pingora-http",
    "pingora/pingora-lru",
    "pingora/pingora-openssl",
    "pingora/pingora-boringssl",
    "pingora/pingora-runtime",
    "pingora/pingora-rustls",
    "pingora/pingora-s2n",
    "pingora/pingora-ketama",
    "pingora/pingora-load-balancing",
    "pingora/pingora-memory-cache",
    "pingora/tinyufo",
]

[workspace.dependencies]
# === Pingora's own workspace deps (must be provided for path-dep members) ===
bstr = "1.12"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "sync", "io-util", "net", "time"] }
tokio-stream = "0.1"
async-trait = "0.1"
httparse = "1"
bytes = "1"
derivative = "2.2"
http = "1"
log = "0.4"
h2 = ">=0.4.11"
once_cell = "1"
lru = "0.16"
ahash = ">=0.8.9"

# === conduit deps ===
pingora = { path = "pingora/pingora", features = ["proxy", "boringssl"] }
pingora-core = { path = "pingora/pingora-core", features = ["boringssl"] }
pingora-proxy = { path = "pingora/pingora-proxy", features = ["boringssl"] }
pingora-boringssl = { path = "pingora/pingora-boringssl" }
pingora-http = { path = "pingora/pingora-http" }
pingora-error = { path = "pingora/pingora-error" }
pingora-cache = { path = "pingora/pingora-cache", features = ["boringssl"] }
pingora-limits = { path = "pingora/pingora-limits" }
pingora-load-balancing = { path = "pingora/pingora-load-balancing", features = ["boringssl"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
deadpool-redis = "0.23"
redis = { version = "1", features = ["tokio-comp", "tokio-rustls-comp"] }
boring = "4.21"
boring-sys = "4.21"
parking_lot = { version = "0.12", features = ["arc_lock"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["json", "query"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
anyhow = "1"
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
bcrypt = "0.18"
governor = "0.10"
nonzero_lit = "0.1"
bloomfilter = "1"
ipnet = "2"
regex = "1"
unicode-normalization = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
prometheus = "0.14"
arc-swap = "1"
fnv = "1"
futures = "0.3"
brotli = "7"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
