[package]
name = "conduit-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conduit-api"
path = "src/main.rs"

[dependencies]
conduit-common = { path = "../conduit-common" }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Redis
deadpool-redis = { workspace = true }
redis = { workspace = true }

# HTTP framework
axum = { workspace = true }
tower-http = { workspace = true }

# CLI
clap = { workspace = true }

# Misc
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
tokio-stream = { workspace = true }
governor = { workspace = true }
nonzero_lit = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http = { workspace = true }
