[package]
name = "conduit-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
boring = { workspace = true }
boring-sys = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
