[package]
name = "conduit-mock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conduit-mock"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
rcgen = "0.14"
tokio-rustls = "0.26"
rustls = "0.23"
clap = { workspace = true }
serde_json = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
rustls-pemfile = "2"
